AM_CPPFLAGS = -I/Users/caoj7/program/common-c/include
LDADD = -L/Users/caoj7/program/common-c/lib -lavro

lib_LTLIBRARIES = libhamster_avro.la

headers = \
	common.h \
	constants.h \
	register.h \
	hnp_request_wrapper.h \
	person.h
	
libhamster_avro_la_SOURCES = = \
	$(headers) \
	common.c \
	hnp_request_wrapper.c \
	register.c \
	person.c 
